Create button and input form components

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Google+Sans:200,300,400,500,600,700,900");
-@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
 
 *,
@@ -12,10 +12,17 @@
 
 :root {
   --app-green: #bff9e7;
+  --app-hover-green: #8cffdb;
   --app-yellow: #fae4ad;
   --app-violet: #ebc8f7;
   --app-blue: #4ec7ff;
+  --app-background-1: #101010;
+  --app-background-2: #1e1e1e;
+  --app-background-3: #aaa;
+  --app-white: #eee;
   --app-font-primary: "Google Sans";
+  --app-font-secondary: "Quicksand";
+  --app-font-tertiary: "Poppins";
 }
 
 body {
@@ -24,4 +31,15 @@ body {
     "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+button,
+input,
+select {
+  outline: none;
+  border: none;
+}
+
+a {
+  text-decoration: none;
 }
