--- a/src/components/progress_bar/ProgressBar.module.css
+++ b/src/components/progress_bar/ProgressBar.module.css
@@ -1,14 +1,14 @@
 .progress {
   height: 100%;
-  background-color: #BFF9E7;
+  background-color:var(--app-green);
   transition: width 0.3s ease-in-out;
   border-radius: 5px;
 }
 
-.progress-bar {
+.progress__bar {
   width: 100%;
   height: 10px;
-  background-color: #e0e0e0;
+  background-color: var(--app-white);
   border-radius: 5px;
   overflow: hidden;
   margin: 1rem;
