feat: working on back navigation of stages stack component

--- a/src/pages/journeys/stages/Stage.module.css
+++ b/src/pages/journeys/stages/Stage.module.css
@@ -49,8 +49,20 @@ img {
 .wrapper__roundButton {
   width: 35%;
   display: flex;
-  justify-content: flex-end;
+  justify-content:space-between;
   align-items: end;
+}
+
+.wrapper__roundButton__2 {
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.wrapper__roundButton__2 a{
+  width: 100%;
+  display: flex;
+  align-items: center;
 }
 
 
