feat: home page for ongoing journey done without statistics

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -16,6 +16,7 @@
   --app-yellow: #fae4ad;
   --app-violet: #ebc8f7;
   --app-blue: #4ec7ff;
+  --app-orange: #f49867;
   --app-background-1: #101010;
   --app-background-2: #1e1e1e;
   --app-background-3: #aaa;
