--- a/src/pages/protected/journeys/Journeys.module.css
+++ b/src/pages/protected/journeys/Journeys.module.css
@@ -1,28 +1,53 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* align-items: center; */
+  /* justify-content: center; */
+  width: 100vw;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  gap: 2rem;
+  justify-content: space-between;
+}
+
+.stats {
+  display: flex;
+  background-color: #1e1e1e;
+  width: 100%;
+  padding: 1rem;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .metric {
-    text-align: center;
+  text-align: center;
 }
 
 .metricValue {
-    font-size: 24px;
-    font-weight: bold;
-    color: white;
+  color: white;
 }
 
 .metricLabel {
-    font-size: 16px;
-    color: white;
+  font-size: 16px;
+  color: white;
+}
+
+.journeyList {
+  width: 100%;
+  display: flex;
+  flex-flow: column;
+  gap: 1rem;
+  padding: 1rem;
+  flex-grow: 1;
+  overflow-y: auto;
 }
 
 .journey {
-    padding: 10px;
-    margin-bottom: 10px;
-    background-color: lightblue;
-    cursor: pointer;
+  background-color: #222;
+  cursor: pointer;
+  color: #aaa;
+  border-radius: 0.2rem;
+  padding: 2rem 1rem;
+  border-left: 0.3rem solid var(--app-green);
 }
