--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -2,6 +2,9 @@
   display: flex;
   justify-content: space-between;
   background-color: var(--app-background-2);
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 7px 29px 0px;
+  position: relative;
+  z-index: 999;
 }
 
 .navbar__logo {
