--- a/src/pages/protected/journeys/Journeys.module.css
+++ b/src/pages/protected/journeys/Journeys.module.css
@@ -7,8 +7,9 @@
   display: flex;
   flex-flow: column;
   align-items: center;
-  gap: 2rem;
+  /* gap: 2rem; */
   justify-content: space-between;
+  height: 85vh;
 }
 
 .stats {
@@ -18,6 +19,7 @@
   padding: 1rem;
   align-items: center;
   justify-content: space-around;
+  /* box-shadow: rgba(0, 0, 0, 0.5) 0px 7px 29px 0px; */
 }
 
 .metric {
@@ -40,14 +42,20 @@
   gap: 1rem;
   padding: 1rem;
   flex-grow: 1;
-  overflow-y: auto;
+  overflow-y: scroll;
 }
 
 .journey {
-  background-color: #222;
+  background-color: #1a1a1a;
   cursor: pointer;
-  color: #aaa;
+  color: white;
   border-radius: 0.2rem;
   padding: 2rem 1rem;
   border-left: 0.3rem solid var(--app-green);
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 84vw;
+  }
 }
