--- a/src/pages/protected/journeys/Journeys.module.css
+++ b/src/pages/protected/journeys/Journeys.module.css
@@ -14,7 +14,8 @@
 
 .stats {
   display: flex;
-  background-color: #1e1e1e;
+  /* background-color: #1e1e1e; */
+  background: linear-gradient(90.53deg, #dc82fb -25.13%, #f49867 107.99%);
   width: 100%;
   padding: 1rem;
   align-items: center;
@@ -39,7 +40,7 @@
   width: 100%;
   display: flex;
   flex-flow: column;
-  gap: 1rem;
+  gap: 1.5rem;
   padding: 1rem;
   flex-grow: 1;
   overflow-y: scroll;
@@ -57,5 +58,73 @@
 @media screen and (min-width: 768px) {
   .container {
     width: 84vw;
+    height: 100vh;
+  }
+}
+
+/** Journey Details **/
+
+.journey_details_wrapper {
+  width: 100vw;
+  display: flex;
+  flex-flow: column;
+  /* align-items: center; */
+  /* gap: 2rem; */
+  justify-content: space-between;
+  height: 85vh;
+}
+
+.journey_details_metadata {
+  background: linear-gradient(90.53deg, #dc82fb -25.13%, #f49867 107.99%);
+  padding: 1rem;
+  /* columns: 3; */
+}
+
+.journey_details_metadata section {
+  margin-bottom: 1rem;
+}
+
+.journey_details_metadata h1 {
+  color: white;
+}
+
+.journey_details_metadata small {
+  color: #333;
+  font-weight: 500;
+}
+.journey_details_metadata p {
+  color: white;
+  font-size: 120%;
+}
+
+.daresList {
+  padding: 1rem;
+  width: 100%;
+  display: flex;
+  flex-flow: column;
+  gap: 1rem;
+  padding: 1rem;
+  flex-grow: 1;
+  overflow-y: scroll;
+}
+
+.dare {
+  background-color: #1a1a1a;
+  padding: 1rem;
+  display: flex;
+  flex-flow: column;
+  gap: 0.5rem;
+  border-radius: 0.5rem;
+}
+
+.stars {
+  display: flex;
+  gap: 0.2rem;
+}
+
+@media screen and (min-width: 768px) {
+  .journey_details_wrapper {
+    width: 84vw;
+    height: 100vh;
   }
 }
