--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -5,6 +5,7 @@
   box-shadow: rgba(0, 0, 0, 0.5) 0px 7px 29px 0px;
   position: relative;
   z-index: 999;
+  width: 100vw;
 }
 
 .navbar__logo {
@@ -61,6 +62,15 @@
   flex-grow: 1;
 }
 
+.extra__menu__float {
+  display: block;
+  position: absolute;
+  bottom: 100%;
+  right: 0;
+  display: flex;
+  background-color: var(--app-background-2);
+}
+
 @media screen and (min-width: 768px) {
   .navbar {
     width: 16vw;
@@ -111,5 +121,10 @@
 
   .extra__menu {
     display: block;
+  }
+
+  .extra__menu__float {
+    display: block;
+    position: unset;
   }
 }
