--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -19,7 +19,8 @@
   width: 100vw;
 }
 
-.navbar__menu__item a {
+.navbar__menu__item a,
+.navbar__menu__item__active a {
   display: flex;
   flex-flow: column;
   padding: 1rem 0.8rem;
@@ -29,7 +30,8 @@
   text-align: center;
 }
 
-.navbar__menu__item a:hover .navbar__menu__item__icon {
+.navbar__menu__item a:hover .navbar__menu__item__icon,
+.navbar__menu__item__active a:hover .navbar__menu__item__icon {
   animation: wobble 0.5s ease-in-out alternate infinite;
 }
 
@@ -45,14 +47,18 @@
   }
 }
 
-.navbar__menu__item a:hover {
+.navbar__menu__item a:hover,
+.navbar__menu__item__active a {
   color: var(--app-green);
 }
-.navbar__menu__item a:hover path {
+
+.navbar__menu__item a:hover path,
+.navbar__menu__item__active a path {
   fill: var(--app-green);
 }
 
-.navbar__menu__item:first-child a:hover path {
+.navbar__menu__item:first-child a:hover path,
+.navbar__menu__item__active:first-child a path {
   fill: transparent;
   stroke: var(--app-green);
 }
@@ -88,16 +94,19 @@
     flex-grow: 4;
   }
 
-  .navbar__menu__item {
+  .navbar__menu__item,
+  .navbar__menu__item__active {
     width: 100%;
   }
 
-  .navbar__menu__item:hover {
+  .navbar__menu__item:hover,
+  .navbar__menu__item__active {
     background-color: rgba(191, 249, 231, 0.1);
-    border-radius: 5rem;
+    border-radius: 0.2rem;
   }
 
-  .navbar__menu__item a {
+  .navbar__menu__item a,
+  .navbar__menu__item__active a {
     flex-flow: row;
     align-items: center;
     font-size: 120%;
